--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,12 @@
-/caseSensors/secrets.py
-/hardwareSensors/__pycache__/*
-/hardwareSensors/test2.py
-/caseSensors/secret.py
-/hardwareSensors/secret.py
-/hardwareSensors/*.json
+/caseSensors/config/caseConfig.json
+/caseSensors/config/secrets.json
 /common/*.json
 /common/__pycache__/*
 /common/config.json
 /common/secrets.json 
 /hardwareSensors/scratch.py 
 /hardwareSensors/opi5plus.py 
-/hardwareSensors/hardwareData.log
-/hardwareSensors/config/secrets.json 
-/hardwareSensors/config/windowsConfig.json 
-/hardwareSensors/config/opi5plus.json
-/hardwareSensors/config/OrangePi5_config.json
-/hardwareSensors/config/nuc12Config.json
-/hardwareSensors/config/secretsNUC12.json  
+/windows/hardwareData.log
+/windows/config/secrets.json 
+/windows/config/windowsConfig.json 
+/windows/__pycache__/*
