--- a/.github/workflows/case_temp_image_build.yaml
+++ b/.github/workflows/case_temp_image_build.yaml
@@ -29,4 +29,4 @@ jobs:
           file: ./case_temps/Dockerfile
           platforms: linux/arm64
           push: true
-          tags: markhamlee/:latest
+          tags: markhamlee/pc_case_temps:latest
