--- a/.github/workflows/case_temp_image_build.yaml
+++ b/.github/workflows/case_temp_image_build.yaml
@@ -25,7 +25,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
-          context: ./
+          context: .
           file: ./case_temps/Dockerfile
           platforms: linux/arm64
           push: true
