--- a/.gitignore
+++ b/.gitignore
@@ -16,4 +16,5 @@
 /linux/config/secrets.json
 /linux/hardwareData.log
 /linux/config/opi5plus.json
-/linux/config/OrangePi5_config.json 
+/linux/config/OrangePi5_config.json
+*.log 
