Updating base image

--- a/case_temps/Dockerfile
+++ b/case_temps/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.10-slim AS builder
+FROM python:3.13-3 AS builder
 
 WORKDIR /app
 
@@ -10,7 +10,7 @@ RUN pip wheel --no-cache-dir --no-deps --wheel-dir /app/wheels -r requirements.t
 
 
 # final stage
-FROM python:3.10-slim
+FROM python:3.13-3slim
 
 RUN apt-get update -y && apt-get install -y libgpiod2
 
